Fixed trailer spacing

--- a/src/static/less/uxebu.less
+++ b/src/static/less/uxebu.less
@@ -191,7 +191,7 @@ input, textarea {
 }
 
 .uni-form label,.uni-form .label{color:#888;}
-.uni-form 
+.uni-form
 .uni-form fieldset legend{margin-bottom:10px;color:#AAA;font-weight:400;}
 .uni-form .form-hint{font-size:80%;color:#AAA;}
 .uni-form label{font-weight:400;}
@@ -479,6 +479,8 @@ a.tag:hover, a.tag:focus, a.tag:visited,
 
 .trailer {
     position: relative;
+    margin-top: 60px;
+    .mbx;
 
     a {
         color: #fff;
